--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://18.221.19.83:3306/forexpay?createDatabaseIfNotExist=true
-spring.datasource.username=inguser3
+spring.datasource.url=jdbc:mysql://34.200.41.57:3306/forexpaydb?createDatabaseIfNotExist=true
+spring.datasource.username=forexuser1
 spring.datasource.password=H@ckath0n
 
 server.port=9090
-server.servlet.context-path=/forexpay
+server.servlet.context-path=/forexpaydb
 
 #Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
